--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>eSenior - Poradnik internetowy</title>
-    <link rel="icon" href="src/images/eSeniorLogo.png" type="image/png">
+    <link rel="icon" href="public/eSeniorLogo.png" type="image/png">
      <!-- Meta Tag dla SEO -->
     <meta name="description" content="eSenior - Platforma edukacyjna dla seniorów, pomagająca w nauce korzystania z popularnych platform i internetu.">
     <meta name="keywords" content="eSenior, edukacja dla seniorów, nauka internetu, platformy internetowe, kursy dla seniorów">
